--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "craco-alias": "^2.1.1",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "file-loader": "^6.2.0",
     "prettier": "2.1.2"
   }
 }
