--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "babel-loader": "8.1.0",
     "classnames": "^2.2.6",
     "eslint-config-airbnb": "^18.2.1",
     "node-sass": "4.14.1",
