--- a/package.json
+++ b/package.json
@@ -46,8 +46,7 @@
     ]
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^6.1.1",
-    "@storybook/addons": "^6.1.1",
+    "@storybook/addon-essentials": "^6.1.9",
     "@storybook/preset-create-react-app": "^3.1.5",
     "@storybook/react": "^6.1.1",
     "craco-alias": "^2.1.1",
