--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.0",
     "babel-loader": "8.1.0",
     "classnames": "^2.2.6",
+    "dotenv": "^8.2.0",
     "eslint-config-airbnb": "^18.2.1",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
