--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.0",
     "babel-loader": "8.1.0",
     "classnames": "^2.2.6",
+    "create-react-app": "^4.0.1",
     "dotenv": "^8.2.0",
     "eslint-config-airbnb": "^18.2.1",
     "node-sass": "4.14.1",
